styling and server roundtrips for login/logout

--- a/app/views/login.haml
+++ b/app/views/login.haml
@@ -2,7 +2,7 @@
   .card.card-container
     %img.profile-img-card#profile-img
     %p.profile-name-card#profile-name
-      %form.form-signin{method: "POST", action: "#{url_for("/login")}", data: {"internal": "true"}}
+      %form.form-signin{method: "POST", action: "#{url_for("/login")}"}
         %input.form-control#username{name: "username", type: "input", placeholder: "Username", required: true, autofocus: true}
         %input.form-control#password{name: "password", type: "password", placeholder: "Password", required: true}
         %input#referer{name: "referer", type: "hidden", value: "#{referer}"}
