--- a/public/css/default.css
+++ b/public/css/default.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #f3f4f6;
 }
 
 .logo {
@@ -34,6 +35,7 @@ body {
   right: 0;
   background: white;
   z-index: 100;
+  background-color: #111827;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
@@ -42,13 +44,24 @@ body {
 }
 
 .search-container {
-  flex: 1;
-  margin: 0 1rem;
-  background: white;
+    max-width: 42rem;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #1f2937;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    align-items: center;
+}
+
+.search-input:focus {
+    outline: none;
+}
+
+.search-input::placeholder {
+    color: #9ca3af;
 }
 
 .search-input {
-  width: 100%;
   padding: 0.5rem;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -57,8 +70,9 @@ body {
 .main-content {
   margin-top: var(--header-height);
   margin-bottom: var(--player-height);
-  padding: 1rem;
-  flex: 1;
+  padding: 1.5rem;
+  overflow-y: auto;
+  min-height: calc(100vh - 152px);
 }
 
 .twocol {
