wikipedia tweaks and limit on summaries

--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -23,7 +23,7 @@
   %body
     %header.search-header
       %a.btn.logo{data: {"internal": "true"}, href:"#{url_for("/")}"}
-        PShare
+        P&middot;Share
       .search-container
         %form{data: {"internal": "true"}, id: "search", action: "#{url_for("/search")}", method: "POST"}
           .form-group
