--- a/public/css/default.css
+++ b/public/css/default.css
@@ -92,19 +92,48 @@ body {
   gap: 1rem;
 }
 
+.album-info .title a{
+  text-decoration: none;
+  font-size: xx-large;
+}
+
+.album-info .artist a{
+  text-decoration: none;
+  font-size: x-large;
+}
+
+
+
+.controls {
+  display: inline;
+}
+
+.controls > .btn {
+  display: inline-block;
+}
+
 .tracks {
   display: flex;
   flex-direction: column;
 }
 
 .track {
-  padding: 1rem;
+  display: flex;
+  padding: .5rem;
   border-bottom: 1px solid #eee;
-  cursor: pointer;
+  text-align: left;
+  gap: 1em;
 }
 
 .track:hover {
-  background: #f5f5f5;
+  background: #ddd;
+}
+
+.track .title {
+  flex: auto;
+}
+.track .play-now {
+  cursor: pointer;
 }
 
 .fit-image {
@@ -278,5 +307,9 @@ body {
   .playlist-panel.show {
     height: calc(100vh - var(--playlist-height));
     transform: translateX(0);
+  }
+
+  .fit-image {
+    max-height: 500px;
   }
 }
