--- a/app/views/partials/artist.haml
+++ b/app/views/partials/artist.haml
@@ -4,4 +4,4 @@
     %img{title: "#{artist.name}", src: "#{url_for("/images/artists/sm/#{artist.image_path}")}"}
 -else
   %a{href: "#{url_for url}", data: {"internal": "true"}}
-    %img.img-responsive.fit-image#artist_image{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+    %img.fit-image#artist_image{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
