--- a/app/views/search.haml
+++ b/app/views/search.haml
@@ -4,9 +4,9 @@
   !=haml :"partials/playlist", locals: {playlist: playlist, admin: false}
 %h3
   Artists
--artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
+-artists.each do |artist|
   !=haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
 %h3
   Albums
--albums.to_a.select{|album| album.tracks.size > 0}.each do |album|
+-albums.each do |album|
   !=haml :"partials/album", locals: {album: album}
