--- a/app/views/admin/album.haml
+++ b/app/views/admin/album.haml
@@ -1,69 +1,70 @@
 %meta{name: "page-script", content: url_for("/js/pages/admin/album.js")}
-.link
-  %a{href: "#{url_for("/artist/#{model.artist.id}")}", data: {"internal": "true"}}
-    =model.artist.name
-.link
-  %a{href: "#{url_for("/#{model.class.to_s.downcase}/#{model.id}")}", data: {"internal": "true"}}
-    =model.to_s
-.row
-  %form.model
-    -model.editable_attributes.each do |k,v|
+.grid
+  .link
+    %a{href: "#{url_for("/artist/#{model.artist.id}")}", data: {"internal": "true"}}
+      =model.artist.name
+  .link
+    %a{href: "#{url_for("/#{model.class.to_s.downcase}/#{model.id}")}", data: {"internal": "true"}}
+      =model.to_s
+  .row
+    %form.model
+      -model.editable_attributes.each do |k,v|
+        .input-group.input-group-lg
+          %span.input-group-addon
+            =k
+          %input.form-control{type:"text", name:"#{k}", value: "#{v}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_model(#{model.id})}"} 
+  .row
+    %img{src: "#{url_for("/images/albums/#{model.image_path}")}"}
+  .row
+    %form.imageform
       .input-group.input-group-lg
         %span.input-group-addon
-          =k
-        %input.form-control{type:"text", name:"#{k}", value: "#{v}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_model(#{model.id})}"} 
-.row
-  %img{src: "#{url_for("/images/albums/#{model.image_path}")}"}
-.row
-  %form.imageform
-    .input-group.input-group-lg
-      %span.input-group-addon
-        Image Url
-      %input.form-control{type:"text", name:"image_url"}
-    .input-group.input-group-lg
-      %span.input-group-addon
-        Image Name
-      %input.form-control{type:"text", name:"image_name", value: "#{model.image_path}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_image(#{model.id})}"} 
-.row.sp-top-sm.no-pad
-  !=haml :'partials/tags', locals: { base_url: "#{base_url}/tag", tags: model.tags }
-.row
-  .col-xs-12
-    !=haml :'partials/newtag', locals: { owner_id: model.id }
+          Image Url
+        %input.form-control{type:"text", name:"image_url"}
+      .input-group.input-group-lg
+        %span.input-group-addon
+          Image Name
+        %input.form-control{type:"text", name:"image_name", value: "#{model.image_path}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_image(#{model.id})}"} 
+  .row.sp-top-sm.no-pad
+    !=haml :'partials/tags', locals: { base_url: "#{base_url}/tag", tags: model.tags }
+  .row
+    .col-xs-12
+      !=haml :'partials/newtag', locals: { owner_id: model.id }
 
-.row.sp-top-sm.no-pad
-  .h4 
-    Update on all tracks
-  .col-md-1
-    AlbumId
-  .col-md-1
-    ArtistId
-%form{class: "globalform"}
-  .row.no-pad
+  .row.sp-top-sm.no-pad
+    .h4 
+      Update on all tracks
     .col-md-1
-      %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{model.id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_all_tracks(#{model.id})}"}
+      AlbumId
     .col-md-1
-      %input.col-md-4.form-control{type: 'text', name: 'artist_id', value: "#{model.artist.id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_all_tracks(#{model.id})}"}
-
-.row.sp-top-sm.no-pad
-  .col-md-1
-    TrackNum
-  .col-md-1
-    AlbumId
-  .col-md-1
-    ArtistId
-  .col-md-6
-    Title
--model.tracks.sort_by{|x| x.track_number.to_i}.each do |track|
-  -base_track_url = url_for("/admin/track/#{track.id}")
-  %form{class: "trackform#{track.id}"}
+      ArtistId
+  %form{class: "globalform"}
     .row.no-pad
       .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
+        %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{model.id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_all_tracks(#{model.id})}"}
       .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{track.album_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
-      .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'artist_id', value: "#{track.artist_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
-      .col-md-6
-        %input.form-control{type: 'text', name: 'title', value: "#{track.title}", onFocus: "this.dirty=false;", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
-      .col-md-1
-        %input.btn.btn-warning{type: 'button', onClick:"if(confirm('delete track?')) {delete_track('#{base_track_url}', '#{track.id}')}", value: "delete"}
+        %input.col-md-4.form-control{type: 'text', name: 'artist_id', value: "#{model.artist.id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_all_tracks(#{model.id})}"}
+
+  .row.sp-top-sm.no-pad
+    .col-md-1
+      TrackNum
+    .col-md-1
+      AlbumId
+    .col-md-1
+      ArtistId
+    .col-md-6
+      Title
+  -model.tracks.sort_by{|x| x.track_number.to_i}.each do |track|
+    -base_track_url = url_for("/admin/track/#{track.id}")
+    %form{class: "trackform#{track.id}"}
+      .row.no-pad
+        .col-md-1
+          %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
+        .col-md-1
+          %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{track.album_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
+        .col-md-1
+          %input.col-md-4.form-control{type: 'text', name: 'artist_id', value: "#{track.artist_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
+        .col-md-6
+          %input.form-control{type: 'text', name: 'title', value: "#{track.title}", onFocus: "this.dirty=false;", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
+        .col-md-1
+          %input.btn.btn-warning{type: 'button', onClick:"if(confirm('delete track?')) {delete_track('#{base_track_url}', '#{track.id}')}", value: "delete"}
