--- a/app/views/admin/artist.haml
+++ b/app/views/admin/artist.haml
@@ -1,27 +1,28 @@
 %meta{name: "page-script", content: url_for("/js/pages/admin/artist.js")}
-%a{href: "#{url_for("/#{model.class.to_s.downcase}/#{model.id}")}", data: {"internal": "true"}}
-  =model.to_s
-%form.model
-  -model.editable_attributes.each do |k,v|
+.grid
+  %a{href: "#{url_for("/#{model.class.to_s.downcase}/#{model.id}")}", data: {"internal": "true"}}
+    =model.to_s
+  %form.model
+    -model.editable_attributes.each do |k,v|
+      .input-group.input-group-lg
+        %span.input-group-addon
+          =k
+        %input.form-control{type:"text", name:"#{k}", value: "#{v}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_model(#{model.id})}"}
+  %img{src: "#{url_for("/images/artists/#{model.image_path}")}"}
+  %form.imageform
     .input-group.input-group-lg
       %span.input-group-addon
-        =k
-      %input.form-control{type:"text", name:"#{k}", value: "#{v}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_model(#{model.id})}"}
-%img{src: "#{url_for("/images/artists/#{model.image_path}")}"}
-%form.imageform
-  .input-group.input-group-lg
-    %span.input-group-addon
-      Image Url
-    %input.form-control{type:"text", name:"image_url"}
-  .input-group.input-group-lg
-    %span.input-group-addon
-      Image Name
-    %input.form-control{type:"text", name:"image_name", value: "#{model.image_path}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_image(#{model.id})}"}
-.row.sp-top-sm.no-pad
-  !=haml :'partials/tags', locals: { owner_id: model.id, tags: model.tags, base_url: "#{url_for("/admin/artist/#{model.id}")}" }
-.row
-  .col-xs-12
-    !=haml :'partials/newtag', locals: { url: url_for("/artist/#{model.id}/tags") }
-:javascript
-  keypress_enable=false;
+        Image Url
+      %input.form-control{type:"text", name:"image_url"}
+    .input-group.input-group-lg
+      %span.input-group-addon
+        Image Name
+      %input.form-control{type:"text", name:"image_name", value: "#{model.image_path}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_image(#{model.id})}"}
+  .row.sp-top-sm.no-pad
+    !=haml :'partials/tags', locals: { owner_id: model.id, tags: model.tags, base_url: "#{url_for("/admin/artist/#{model.id}")}" }
+  .row
+    .col-xs-12
+      !=haml :'partials/newtag', locals: { url: url_for("/artist/#{model.id}/tags") }
+  :javascript
+    keypress_enable=false;
 
