--- a/public/css/default.css
+++ b/public/css/default.css
@@ -20,8 +20,6 @@ body {
 
 .content-container {
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
 }
 
 .logo {
@@ -36,6 +34,7 @@ body {
 
 .flex {
   display: flex;
+  flex-flow: row wrap;
   gap: .5rem;
 }
 
@@ -123,7 +122,8 @@ body {
 }
 
 .item {
-  max-width: 95%;
+  flex: 1;
+  max-height: 300px;
 }
 
 .controls {
