--- a/public/css/default.css
+++ b/public/css/default.css
@@ -33,9 +33,8 @@ body {
 }
 
 .flex {
-  display: flex;
-  flex-flow: row wrap;
-  gap: .5rem;
+  display: grid;
+  flex-direction: column;
 }
 
 .search-header {
@@ -124,6 +123,7 @@ body {
 .item {
   flex: 1;
   max-height: 300px;
+  grid-column: 1;
 }
 
 .controls {
@@ -344,5 +344,16 @@ body {
 
   .summary{
     max-width: 80%;
+  }
+
+  .flex {
+    display: flex;
+    flex-flow: row wrap;
+    gap: .5rem;
+  }
+
+  .item {
+    flex: 1;
+    max-height: 300px;
   }
 }
