--- a/app/views/partials/artist.haml
+++ b/app/views/partials/artist.haml
@@ -2,6 +2,10 @@
 -if use_small then
   %a.item{href: "#{url_for url}", data: {"internal": true}}
     %img{title: "#{artist.name}", src: "#{url_for("/images/artists/sm/#{artist.image_path}")}"}
+    .item-title
+      =artist.name
 -else
   %a{href: "#{url_for url}", data: {"internal": "true"}}
     %img.fit-image#artist_image{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+    .item-title
+      =artist.name
