add title to other item card uses

--- a/app/views/search.haml
+++ b/app/views/search.haml
@@ -3,10 +3,12 @@
     Playlists
   -playlists.each do |playlist|
     !=haml :"partials/playlist", locals: {playlist: playlist, admin: false}
+.flex
   %h3
     Artists
   -artists.each do |artist|
     !=haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
+.flex
   %h3
     Albums
   -albums.each do |album|
