--- a/app/views/partials/album.haml
+++ b/app/views/partials/album.haml
@@ -1,2 +1,4 @@
 %a.item{href: "#{url_for("/album/#{album.id}")}", data: {"internal": "true"}}
   %img.artist{title: "#{album.title}", src: "#{url_for("/images/albums/sm/#{album.image_path}")}"}
+  .item-title
+    =album.title
