--- a/app/views/partials/playlist.haml
+++ b/app/views/partials/playlist.haml
@@ -1,3 +1,5 @@
 -url = admin == true ? "/admin/playlist/#{playlist.id}" : "/playlist/#{playlist.id}"
 %a.item{href: "#{url_for url}", data: {"internal": "true"}}
   %img.item{title: "#{playlist.name}", src: "#{url_for "/images/albums/sm/#{playlist.image_path}"}"}
+  .item-title
+    =playlist.name
