--- a/app/views/partials/artist.haml
+++ b/app/views/partials/artist.haml
@@ -1,11 +1,11 @@
 -url = admin == true ? "/admin/artist/#{artist.id}" : "/artist/#{artist.id}"
 -if use_small then
   %a.item{href: "#{url_for url}", data: {"internal": true}}
-    %img{title: "#{artist.name}", src: "#{url_for("#{ENV["BEMUSED_PATH"]}/images/artists/sm/#{artist.image_path}")}"}
+    %img{title: "#{artist.name}", src: "#{url_for("#{ENV["BEMUSED_DEV_PATH"]}/images/artists/sm/#{artist.image_path}")}"}
     .item-title
       =artist.name
 -else
   %a{href: "#{url_for url}", data: {"internal": "true"}}
-    %img.fit-image#artist_image{title: "#{artist.name}", src: "#{url_for "#{ENV["BEMUSED_PATH"]}/images/artists/#{artist.image_path}"}"}
+    %img.fit-image#artist_image{title: "#{artist.name}", src: "#{url_for "#{ENV["BEMUSED_DEV_PATH"]}/images/artists/#{artist.image_path}"}"}
     .item-title
       =artist.name
