--- a/app/views/partials/track.haml
+++ b/app/views/partials/track.haml
@@ -7,10 +7,10 @@
       ="#{track.track_number}. "
     =track.title
     -if show_artist and track.artist
-      %a.sp.link{href: "#{url_for("/artist/#{track.artist.id}")}"}
+      %a.sp.link{data: {"internal": "true"}, href: "#{url_for("/artist/#{track.artist.id}")}"}
         ="(#{track.artist.name})"
     -if show_album and track.album
-      %a.sp.link{href: "#{url_for("/album/#{track.album.id}")}"}
+      %a.sp.link{data: {"internal": "true"}, hhref: "#{url_for("/album/#{track.album.id}")}"}
         =track.album.title
     =track.duration
   .track-actions
