--- a/app/views/upload.haml
+++ b/app/views/upload.haml
@@ -16,6 +16,10 @@
       Genre
     %input#album.form-control{type:"text", name: "genre"}
   .input-group
+    %span.input-group-addon
+      Track Pad
+    %input#album.form-control{type:"text", name: "track_pad"}
+  .input-group
     %input.btn.btn-default.btn-lg{type:"submit", value:"upload"}
 
 -unless params["info"].nil?
