--- a/app/views/upload.haml
+++ b/app/views/upload.haml
@@ -20,6 +20,14 @@
       Track Pad
     %input#album.form-control{type:"text", name: "track_pad"}
   .input-group
+    %span.input-group-addon
+      Album Image
+    %input#album.form-control{type:"text", name: "album_image"}
+  .input-group
+    %span.input-group-addon
+      Artist Image
+    %input#album.form-control{type:"text", name: "artist_image"}
+  .input-group
     %input.btn.btn-default.btn-lg{type:"submit", value:"upload"}
 
 -unless params["info"].nil?
