--- a/app/views/stats_r.haml
+++ b/app/views/stats_r.haml
@@ -5,5 +5,10 @@
       BemusedReact
   %body
     #root
+      %script
+        :plain
+          window.APP_CONFIG = { 
+            baseURL: "#{url_for('/')}" 
+          };
       %script{src: "#{url_for('/dist/bundle.js')}"}
 
